# trust_chain

./: CMakeLists.txt  CORRECTION_SUMMARY.md  DEPENDENCY_SOLUTION.md  README.md  REFACTOR_SUMMARY.md  VARIABLE_DESIGN_PATTERN.md  pseudocode.md  test_api.sh  test_tee_key_manager.sh
host/: Makefile  Makefile copy  main.c
ta/: CORRECTED_SIGNATURE_DESIGN.md  IMPROVED_DESIGN.md  Makefile  PARAMETER_CORRECTIONS.md  STRUCTURE_BASED_PARAMS.md  sub.mk  trust_chain_ta.c  user_ta_header_defines.h
ta/block/: block.c  block.h
ta/include/: README.md  trust_chain_constants.h  trust_chain_ta.h
ta/key_list/: README.md  key_list.c  key_list.h
ta/tee_key_manager/: tee_key_manager.c  tee_key_manager.h
ta/utils/: README.md  utils.c  utils.h
